css/styles.css
/* ... */
.contact-us {
  text-align: center;
  padding: 3rem;
  margin: 2rem;
  background: black;
}
.open-days {
  color: white;
  opacity: 0.9;
  margin: 20px;
  padding: 1.3em 1.5em 0.1em 1.5em;
  background-color: rgba(10, 10, 10, 0.07);
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
}
.contact-title {
  padding: 2rem;
  text-align: center;
}
.contact-background-overlay {
  background-color: transparent;
  color: white;
  background-image: linear-gradient(120deg, #000, rgba(17, 16, 16, 0.6));
  opacity: 1;
  transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
}
.table-form {
  text-align: center;
}

